new file:   Codigo - c++/Codigo_completo/Codigo_completo.ino 	new file:   Codigo - c++/Sensor_bme680/Sensor_bme680.ino 	new file:   Codigo - c++/Sensor_mq135/Sensor_mq135.ino 	modified:   css/styles.css 	modified:   database.sql 	modified:   getdata.php 	modified:   index.html 	modified:   mqtt.php

--- a/index.html
+++ b/index.html
@@ -13,8 +13,35 @@
 </head>
 <body>
 
-<h2>Sensor Data</h2>
-<div id="sensorData"></div>
+<h2>Datos de los sensores</h2>
+<div id="sensorData">
+  <table>
+    <tr>
+      <th>Sensor</th>
+      <th>Valor</th>
+    </tr>
+    <tr>
+      <td>Distancia</td>
+      <td id="distance"></td>
+    </tr>
+    <tr>
+      <td>Temperatura</td>
+      <td id="temperature"></td>
+    </tr>
+    <tr>
+      <td>Humedad</td>
+      <td id="humidity"></td>
+    </tr>
+    <tr>
+      <td>Presión</td>
+      <td id="pressure"></td>
+    </tr>
+    <tr>
+      <td>Calidad del aire</td>
+      <td id="airQuality"></td>
+    </tr>
+  </table>
+</div>
 
 </body>
 </html>
