modified:   index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <td id="humidity"></td>
     </tr>
     <tr>
-      <td>Presión</td>
+      <td>Presion</td>
       <td id="pressure"></td>
     </tr>
     <tr>
